# open-winder

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  tmp.patch  tmp_update.patch
.github/workflows/: ci.yml  ci.yml.bak  debug.yml  secrets.yml
docs/: SPA_PQ.md  installer.md  legacy_proxmox.md
home-secnet/: .env.example  Makefile  README.md
home-secnet/clients/spa-pq-client/: Cargo.toml
home-secnet/proxmox/: node-firewall.groups  node-firewall.rules
home-secnet/router/configs/: wg0.conf  (+19 more)
home-secnet/router/spa-pq/: Cargo.toml
home-secnet/router/spa-pq/src/: main.rs
home-secnet/scripts/: apply_node_firewall.sh  apply_router_configs.sh  apply_router_configs.sh.bak  build_openwrt_image.sh  configure_bridges.sh  configure_host.sh  create_logging_vm.sh  create_router_vm.sh  detect_nics.sh  env_doctor.sh  flash_openwrt_image.sh  harden_host.sh  install.sh  install_winder.sh  migrate_to_flat_lan.sh  oneclick.sh  open-winder-setup.sh  openwrt_build.sh  preflight.sh  prepare_cloud_image.sh  render_openwrt_overlay.sh  render_router_configs.sh  render_ultralight.sh  rotate_wg_key.sh  setup_env.sh  setup_security_maintenance.sh  verify_deploy.sh  wizard.sh
home-secnet/tests/: spa_unit.sh  verify_dns.sh  verify_hysteria_overlay.sh  verify_ids.sh  verify_isolation.sh  verify_no_generated_in_router.sh  verify_no_smarty.sh  verify_openwrt_interfaces.sh  verify_openwrt_overlay.sh  verify_spa.sh  verify_sqm_overlay.sh  verify_suricata_overlay.sh  verify_wg.sh
legacy/: create_router_vm.sh  detect_hypervisor.sh  prepare_cloud_image.sh
(+75 files in other folders)
